# nest_theme

./: .gitignore  README.md  license.txt  pyproject.toml
nest_theme/: api.py  boot.py  hooks.py  modules.txt  patches.txt
nest_theme/nest_theme/doctype/nest_theme_settings/: nest_theme_settings.json  nest_theme_settings.py
nest_theme/nest_theme/doctype/nest_theme_user_preference/: nest_theme_user_preference.json  nest_theme_user_preference.py
nest_theme/patches/: drop_user_preference_doctype.py
nest_theme/public/css/: syn_theme.bundle.css
nest_theme/public/js/: syn_boot.bundle.js
