[project]
name = "nest_theme"
authors = [{ name = "Syncflo", email = "ops@syncflo.co.za" }]
description = "Syncflo internal: branded palette + per-user density and font controls for Frappe v16"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "nest_theme"
